試しにコミット

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-TEST
+<pre>
+openBD（ブックデータ）
+
+　20170123セミナーにご参加ください
+書誌情報・書影をだれでも自由に使える、高速なAPIを提供します
+
+私たちopenBDプロジェクト（カーリル・版元ドットコム）は書誌情報・書影を自由にします。
+
+個人がSNSやブログに本を紹介するとき
+書店が仕入れや販売のために本を紹介するとき
+図書館が選書し利用者に提供するために本を紹介するとき
+メディアが本を紹介するとき
+企業が書誌情報・書影を利用したあらたなサービスを開発するとき
+こうしたときに自由に使える書誌情報・書影を、高速なAPIで提供するopenBDの提供を開始します。
+オープンな本のデータが、本の世界をますます豊かにすると考えるからです。
+
+openBDは、カーリルがAPIシステムを開発します。カーリルはこれまで図書館蔵書・貸出情報を横断的に高速で検索するサイトを提供しています。ここでつちかったノウハウを活用して取り組みます。
+openBDに掲載する書誌情報・書影は版元ドットコムが収集します。版元ドットコムは、会員出版社229社のつくった本の書誌情報・書影をネット上で公開し、あわせて書店・取次などに送り届けるシステムをつくる出版社団体です。さらに会員出版社にとどまらず、大手出版社から中小出版社まで24,747社の76万タイトルの本の情報、ためし読み、書評掲載情報などをあつめたサイトを公開しています。書誌情報・書影の収集のノウハウを活用して取組みます。
+
+このopenBDを具体的に紹介するための公開のセミナーを行います。
+どなたでも参加いただけますので、お待ちしています。
+
+openBD掲載書誌情報
+・書誌情報　760,792タイトル　掲載出版社　24,747社　書影　●●●　近刊情報　4,026タイトル　405社
+・書評掲載情報　36,877タイトル　54,238件
+・ためし読み　11,107タイトル
+openBD API機能
+・1タイトル呼び出し時間　●●●s
+
+
+　日時　2017年1月23日（月）　開場・15:00／開始・15:30／終了・17:30　
+　場所　国立情報学研究所　12階会議室（1208、1210）
+　主催　openBDプロジェクト（カーリル・版元ドットコム）
+
+＊カーリル　https://calil.jp/
+＊版元ドットコム　http://www.hanmoto.com/
+</pre>
