--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
 					<header id="header" class="alt">
 						<!--<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
 						<h1 style="font-family: 'Cormorant Garamond', serif;letter-spacing:3px">openBD</h1>
+
 						<p>書誌情報・書影を自由に</p>
+
+
+
+<div style="text-align:center">
+<a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fopenbd.jp%2F&width=135&layout=button_count&action=like&size=small&show_faces=true&share=true&height=46&appId=270660792981320" width="135" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+</div>
+
 <span><a href="#event">2017年1月23日（月）openBDセミナーを開催します！</a></span>
 					</header>
-
-
 
 
 				<!-- Nav -->
