トップページアップデート

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 </div>
 
 <span><a href="#event">2017年1月23日（月）openBDセミナーを開催します！（満員御礼）</a></span>
-
+<div>
+<span><a href="/spec/">APIデータ仕様書</a> / <a href="/pdf/openBD_doc_20170123.pdf">配布資料</a></span>
+</div>
 
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
