--- a/spec/index.html
+++ b/spec/index.html
@@ -1,71 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0068)http://www.hanmoto.com/dev/obd.html#f=epubcfi(/2!/6[h5o-1]/20/2/5:0) -->
-<html><script>(function main() {
-    // Create enabled event
-    function fireEnabledEvent() {
-        // If gli exists, then we are already present and shouldn't do anything
-        if (!window.gli) {
-            setTimeout(function () {
-                var enabledEvent = document.createEvent("Event");
-                enabledEvent.initEvent("WebGLEnabledEvent", true, true);
-                document.dispatchEvent(enabledEvent);
-            }, 0);
-        } else {
-            //console.log("WebGL Inspector already embedded on the page - disabling extension");
-        }
-    };
-
-    // Grab the path root from the extension
-    document.addEventListener("WebGLInspectorReadyEvent", function (e) {
-        var pathElement = document.getElementById("__webglpathroot");
-        if (window["gliloader"]) {
-            gliloader.pathRoot = pathElement.innerText;
-        } else {
-            // TODO: more?
-            window.gliCssUrl = pathElement.innerText + "gli.all.css";
-        }
-    }, false);
-
-    // Rewrite getContext to snoop for webgl
-    var originalGetContext = HTMLCanvasElement.prototype.getContext;
-    if (!HTMLCanvasElement.prototype.getContextRaw) {
-        HTMLCanvasElement.prototype.getContextRaw = originalGetContext;
-    }
-    HTMLCanvasElement.prototype.getContext = function () {
-        var ignoreCanvas = this.internalInspectorSurface;
-        if (ignoreCanvas) {
-            return originalGetContext.apply(this, arguments);
-        }
-
-        var result = originalGetContext.apply(this, arguments);
-        if (result == null) {
-            return null;
-        }
-
-        var contextNames = ["moz-webgl", "webkit-3d", "experimental-webgl", "webgl", "3d"];
-        var requestingWebGL = contextNames.indexOf(arguments[0]) != -1;
-        if (requestingWebGL) {
-            // Page is requesting a WebGL context!
-            fireEnabledEvent(this);
-
-            // If we are injected, inspect this context
-            if (window.gli) {
-                if (gli.host.inspectContext) {
-                    // TODO: pull options from extension
-                    result = gli.host.inspectContext(this, result);
-                    // NOTE: execute in a timeout so that if the dom is not yet
-                    // loaded this won't error out.
-                    window.setTimeout(function() {
-                        var hostUI = new gli.host.HostUI(result);
-                        result.hostUI = hostUI; // just so we can access it later for debugging
-                    }, 0);
-                }
-            }
-        }
-
-        return result;
-    };
-})();</script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>OpenBD 書誌APIデータ仕様 (v1)</title>
 <style>
 body {
@@ -120,7 +54,9 @@ td {
 詳細仕様は<a href="https://jpro.jpo.or.jp/handout/list">JPROサイト(https://jpro.jpo.or.jp/handout/list)</a>「データ仕様第3版」を参照のこと
 <h3></h3><h3>版元ドットコム独自項目 (hanmoto)</h3>
 <table>
-<tbody><tr><td>datemodified</td><td>情報更新日時</td><td></td></tr>
+<tbody>
+<tr><td>dateshuppan</td><td>出版年月日</td><td>年のみ、年月のみの場合あり</td></tr>
+<tr><td>datemodified</td><td>情報更新日時</td><td></td></tr>
 <tr><td>datecreated</td><td>情報作成日時</td><td></td></tr>
 <tr><td>lanove</td><td>ライトノベルフラグ</td><td></td></tr>
 <tr><td>hasshohyo</td><td>書評データありフラグ</td><td></td></tr>
