削除要請の追加

--- a/terms/index.html
+++ b/terms/index.html
@@ -58,6 +58,9 @@
 
   　利用者は、APIにアクセスして得た情報を利用する権利を第三者に貸与、譲渡、売買等を行ってはならないものとします。<br/>
 
+    <h2>利用者の義務</h2>
+        個別の書誌・書影情報について、プロジェクトからの削除要請があった場合には、速やかにそれに従うものとします。
+
     <h2>APIの権利</h2>
 
     　利用者は本APIに関して本規約に基づき許諾された利用権以外の権利を一切有しないものとします。
