規約の修正

--- a/terms/index.html
+++ b/terms/index.html
@@ -11,10 +11,10 @@
     <ul>
         <li>openBD APIが提供するのはデータの「利用権」です。</li>
         <li>openBD APIが提供する書誌・書影・内容紹介・書評情報などすべての情報は、本の販促・紹介目的に自由に使用できます。個人・団体・企業を問いません。</li>
-        <li>第三者に書誌などを表示しない場合でも、例えば個人の蔵書整理用に使うことができます。</li>
+        <li>第三者に向けて書誌などを表示しない場合でも、例えば個人の蔵書整理用に使うことができます。</li>
         <li>公序良俗に反する行為や、第三者に迷惑をおよぼす行為を除き、どのような利用法でもかまいません。</li>
         <li>
-            提供するデータには近刊情報が含まれますから書誌の内容や書影が時間とともに変更・修正、さらには削除もされる可能性があります。利用側の事情で書誌データをキャッシュする場合は、データの変更をできるだけ早く反映するようにしてください。
+            提供するデータには近刊情報が含まれますから書誌の内容や書影が時間とともに変更・修正、さらには削除される可能性があります。利用側の事情で書誌データをキャッシュする場合は、データの変更をできるだけ早く反映するようにしてください。
         </li>
         <li>個別の書誌・書影情報について、openBDプロジェクトからの削除要請があった場合には、速やかにそれに従うものとします。</li>
         <li>openBD APIから得られたデータを、任意に改変してはいけません。不具合の報告や改善の提案は歓迎します。</li>
@@ -23,10 +23,7 @@
 
     <h1>openBD API 利用規約</h1>
 
-    　openBDプロジェクト（以下、「プロジェクト」と呼びます）では、高速な書誌情報及び書影を提供するAPI（以下、「API」と呼びます）を提供します。
-    　プロジェクトは、株式会社カーリルがAPIのインフラ運用を担当し、版元ドットコム有限責任事業組合が書誌データを整備する共同運営です。
-    　ご利用いただく前に、この「openBD API 利用規約」をお読みになり、同意する必要があります。
-    　ウェブサービスやアプリケーションを実装し利用する者（以下、「利用者」と呼びます）が、APIを利用したサービスや機能を提供することをもって、利用者とプロジェクトとの間で本規約を内容とする契約（以下「本利用契約」と呼びます）が成立したものとみなします。
+    　openBDプロジェクト（以下、「プロジェクト」と呼びます）では、高速な書誌情報及び書影を提供するopenBD API（以下、「API」と呼びます）を提供します。プロジェクトは、株式会社カーリルがAPIのインフラ運用を担当し、版元ドットコム有限責任事業組合が書誌データを整備する共同運営です。ご利用いただく前に、この「openBD API 利用規約」をお読みになり、同意する必要があります。ウェブサービスやアプリケーションを実装し利用する者（以下、「利用者」と呼びます）が、APIを利用したサービスや機能を提供することをもって、利用者とプロジェクトとの間で本規約を内容とする契約（以下「本利用契約」と呼びます）が成立したものとみなします。
 
     <h2>目的</h2>
 
@@ -49,7 +46,6 @@
         <li>詐欺等の犯罪に結びつく内容</li>
         <li>猥褻、児童ポルノまたは児童虐待にあたる画像、文書等</li>
         <li>無限連鎖講（ネズミ講）に該当し、またはこれを勧誘する内容</li>
-        <li>選挙期間中であるか否かを問わず、選挙運動またはこれに類似する行為</li>
         <li>法令もしくは公序良俗（売春、暴力、残虐）に違反する内容</li>
         <li>他の利用者もしくは第三者に不利益、不快感を与える内容</li>
         <li>前各号に該当するおそれがあるとプロジェクトが判断する内容</li>
