--- a/terms/index.html
+++ b/terms/index.html
@@ -10,9 +10,7 @@
     <h1>データ利用のガイドライン</h1>
     <ul>
         <li>openBD APIが提供するのはデータの「利用権」です。</li>
-        <li>openBD APIが提供する書誌・書影・内容紹介・書評情報などすべての情報は、本の販促・紹介目的に自由に使用できます。個人・団体・企業を問いません。</li>
-        <li>第三者に向けて書誌などを表示しない場合でも、例えば個人の蔵書整理用に使うことができます。</li>
-        <li>公序良俗に反する行為や、第三者に迷惑をおよぼす行為を除き、どのような利用法でもかまいません。</li>
+        <li>openBD APIが提供する書誌・書影・内容紹介・書評情報などすべての情報は、本の販促・紹介目的に限り使用できます。個人・団体・企業を問いません。</li>
         <li>
             提供するデータには近刊情報が含まれますから書誌の内容や書影が時間とともに変更・修正、さらには削除される可能性があります。利用側の事情で書誌データをキャッシュする場合は、データの変更をできるだけ早く反映するようにしてください。
         </li>
