表現の修正

--- a/terms/index.html
+++ b/terms/index.html
@@ -42,10 +42,10 @@
         <li>第三者の財産、プライバシーもしくは肖像権を侵害する内容</li>
         <li>第三者の名誉・信用を毀損する内容</li>
         <li>詐欺等の犯罪に結びつく内容</li>
-        <li>猥褻、児童ポルノまたは児童虐待にあたる画像、文書等</li>
+        <li>児童ポルノまたは児童虐待にあたる画像、文書等</li>
         <li>無限連鎖講（ネズミ講）に該当し、またはこれを勧誘する内容</li>
-        <li>法令もしくは公序良俗（売春、暴力、残虐）に違反する内容</li>
-        <li>他の利用者もしくは第三者に不利益、不快感を与える内容</li>
+        <li>法令もしくは公序良俗に違反する内容</li>
+        <li>他の利用者もしくは第三者に不利益を与える内容</li>
         <li>前各号に該当するおそれがあるとプロジェクトが判断する内容</li>
         <li>その他、プロジェクトが不適切と判断する内容</li>
     </ol>
