ヘッダーを整理
ガイドライン記載のお知らせ、配布資料の削除

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fopenbd.jp%2F&width=135&layout=button_count&action=like&size=small&show_faces=true&share=true&height=46&appId=270660792981320" width="135" height="46" style="border:none;overflow:hidden;height:20px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 </div>
 
-<span><a href="#guideline">2017年3月9日（木）ガイドライン・利用規約を公開しました</a></span>
-<div>
-<span><a href="/spec/">APIデータ仕様書</a> / <a href="/pdf/openBD_doc_20170123.pdf">配布資料</a></span>
+<span><a href="/spec/">APIデータ仕様書</a></span>
 </div>
 
 <!-- Begin MailChimp Signup Form -->
