--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fopenbd.jp%2F&width=135&layout=button_count&action=like&size=small&show_faces=true&share=true&height=46&appId=270660792981320" width="135" height="46" style="border:none;overflow:hidden;height:20px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 </div>
-			<a href="https://status.openbd.jp/">リアルタイム可動状況</a>
+			<a href="https://status.openbd.jp/">リアルタイム稼働状況</a>
 </div>
 
 <!-- Begin MailChimp Signup Form -->
