--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>openBD | 書誌情報・書影を自由に</title>
 		<meta charset="utf-8" />
+		<meta name="google-site-verification" content="pdGPhk30NkuXfgI38Oy8tOJQVwEPcDRWGQvzuXxSM6o" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
