--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 </div>
 			<a href="https://status.openbd.jp/">リアルタイム稼働状況</a><br/>
 						
-						<a href="#event">openBDユーザーフォーラムを開催します（2022年7月28日）</a>
+						<a href="https://www.hanmoto.com/">openBDの収録情報は、版元ドットコムで確認できます</a><br/>
+						<a href="#event">openBDユーザーフォーラムを開催しました（2022年7月28日）</a>
 				
 </div>
 
