--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <div style="padding:20px;border-radius:20px;background-color:#fff3a5;margin-top:0;margin-bottom:50px">
 <h3>2023年6月1日 : お知らせ</h3>
-一部の出版社から、サイト管理者に書影の削除を要請したところ、openBDの利用規約に沿っているため削除しないとの回答があったとの指摘がありました。openBDの利用規約では、第三者の著作権、その他の知的財産権を侵害する内容のサイト・サービス等での利用を禁止しています。また、「個別の書誌・書影情報について、プロジェクトからの削除要請があった場合には、速やかにそれに従うものとします」と規定しています。出版社から要請があった場合には、ただちにそれに従い、openBDにご連絡ください。openBDプロジェクトでは権利者からの要請があった場合、プロジェクトとしても削除を要請します。その場合には、利用規約に従ってただちに削除してください。引き続きオープンなサービスを提供するために、ご協力をお願いします。→ <a href="https://openbd.jp/terms/">利用規約を確認</a>
+ある出版社から、その出版社の書影が掲載されているサイト管理者に、書影の削除を要請したところ、openBDの利用規約に沿っているため削除しないとの回答があったとの指摘がありました。openBDの利用規約では、第三者の著作権、その他の知的財産権を侵害する内容のサイト・サービス等での利用を禁止しています。また、「個別の書誌・書影情報について、プロジェクトからの削除要請があった場合には、速やかにそれに従うものとします」と規定しています。出版社から要請があった場合には、ただちにそれに従い、openBDにご連絡ください。openBDプロジェクトでは【出版社】からの要請があった場合、プロジェクトとしても削除を要請します。その場合には、利用規約に従ってただちに削除してください。引き続きオープンなサービスを提供するために、ご協力をお願いします。	→ <a href="https://openbd.jp/terms/">利用規約を確認</a>
 </div>
 
 
