--- a/index.html
+++ b/index.html
@@ -81,7 +81,17 @@
 
 									<div class="content">
 <div style="padding:20px;border-radius:20px;background-color:#fff3a5;margin-top:0;margin-bottom:50px">
-<h3>2023年6月12日 : openBDの一部書誌・書影情報の更新遅延について</h3>
+<h3>2023年6月20日 : openBDの一部書誌・書影情報の更新遅延について</h3>
+2023年6月5日からJPO出版情報登録センター（JPRO）から版元ドットコムに対する新しい書誌・書影データの配信が停止されました。openBDプロジェクトでは、版元ドットコムが収集した書誌・書影を配信しているため、この影響を受けています。なお、版元ドットコム会員516社のデータ及び6月4日までにJPROから配信されたデータについては通常通り配信されています。<br/><br/>
+書誌情報・書影を、だれでも自由に使える、高速なAPIで提供するという、openBDプロジェクトの基本コンセプトに変更はなく、自由な書誌・書影の配信インフラは引き続き出版文化を発展させていくために重要なミッションだと考えています。<br/><br/>
+一方で、高い網羅率を維持するためには、引き続きJPROからのデータ提供が継続されることは重要と考えており、協議を継続しています。版元ドットコムでは、書影の配信条件について再検討を行っています。今後、APIの利用条件やデータ収録範囲などに重大な変更が生じる可能性があります。<br/>
+<br/>
+本件については、進捗があり次第速やかに情報を提供する予定です。
+	<br/>
+
+	
+<br/><br/>
+	<h3>2023年6月12日 : openBDの一部書誌・書影情報の更新遅延について</h3>
 6月5日からJPO出版情報登録センター（JPRO）から版元ドットコムに対する書誌・書影データの配信が停止していることを確認しています。版元ドットコム会員社以外の出版社のデータ更新に遅延が発生しています。<br />
 現在、状況を確認中です。
 </div>
